--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,11 @@
+<!DOCTYPE HTML>
 <html>
 <head>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="grid.css">
+
 	<script src="http://d3js.org/d3.v3.min.js"></script>
+
 	<script src="http://d3js.org/topojson.v1.min.js"></script>
 	<script src="stateID.js"></script>
 
@@ -16,11 +20,18 @@
     margin: 50px; 
 		background-color: #f2f2f2;
 	}
+  p {
+    font-size: 0.9rem;
+  }
+  li {
+    font-size: 0.9rem;
+  }
+  h4 {
+    font-size: 1.0rem;
+  }
 	.counties {
 		fill: none;
 	}
-
-
 	.states {
 		fill: none;
 		stroke: #fff;
@@ -43,90 +54,126 @@
       font-size: .7em;
     }
     text {
-      font-size: 0.5rem;
+      font-size: 0.7rem;
     }
     .title {
       font-size: 1rem;
     }
+    .center {
+      text-align: center;
+    }
+    .right {
+      text-align: right;
+    }
+    .left {
+      text-align: left;
+    }
+    .pink {
+      color: #BD36CF;
+    }
+    .red {
+      color: #E83E27;
+    }
+    .blue {
+      color: rgba(49, 130, 189, 1.0);
+    }
+
 
 	</style>
 </head>
 <body>
-	 <!--Title and text -->	
-	 <h1>2013 US Crime Rate Map</h1>
-	 <p>The maps below show the number of different types of crime out of 100,000 people. The darker the color is, the more frequent the occurence of the crime. </p>
-	 <p>Crime Index = Number of Violent Crime + Number of Property Crime. Violent Crime includes Murder, Forcible Rape, Robbery, and Aggravated Assault. Property Crime here includes Burglary, Larceny-Theft and Vehicle-Theft.</p>
+	
+   <div>
+    <h1>2013 US Crime Rate Map</h1>
+	 <p>The maps below shows occurrences different types of crime per 100,000 of the population. The darker the hue, the more frequent the crime. </p>
+	 <ul>
+    <li><span class="pink">Total Crimes</span> is comprised of <span class="red">Violent Crimes</span> and  <span class="blue">Property Crimes.</span></li>
+   <li><span class="red">Violent Crimes</span> is comprised of <span class="red">Murder</span>, <span class="red">Forcible Rape</span>, <span class="red">Robbery</span> and <span class="red">Aggravated Assault</span>.</li>
+   <li><span class="blue">Property Crimes</span> is comprised of <span class="blue">Burglary</span>, <span class="blue">Larceny-Theft</span> and <span class="blue">Vehicle-Theft</span></li>
+  </ul>
+</div>
 
 
 	<div class = "maplinewrap">
-		<div class="mapContainer">
-			<h4>Crime Index</h4>
-			<div id="map1"></div>              
-		</div>
-		<div class="mapContainer">
-			<h4>Violent Crime</h4>
-			<div id="map2"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Property Crime</h4>
-			<div id="map3"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Murder</h4>
-			<div id="map4"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Forcible Rape</h4>
-			<div id="map5"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Robbery</h4>
-			<div id="map6"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Aggravated Assault</h4>
-			<div id="map7"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Burglary</h4>
-			<div id="map8"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Larceny-Theft</h4>
-			<div id="map9"></div>
-		</div>
-		<div class="mapContainer">
-			<h4>Vehicle-Theft</h4>
-			<div id="map10"></div>
-		</div>
+	<div class="mapContainer center">
+			<h4>Total Crimes</h4>
+		  <div id="map1"></div>              
 	</div>
-	
 
+  <div class="container">
+  <div class="grid_6">
+  		<div class="mapContainer center">
+  			<h4>Violent Crime</h4>
+  			<div id="map2"></div>
+  		</div>
+  </div>
+  <div class="grid_6 omega">
+  		<div class="mapContainer center">
+  			<h4>Property Crime</h4>
+  			<div id="map3"></div>
+  		</div><br>
+  </div>
+  </div>
+  <div class="container">
+  <div class="grid_6">
+
+  		<div class="mapContainer center">
+  			<h4>Murder</h4>
+  			<div id="map4"></div>
+  		</div>
+  		<div class="mapContainer center">
+  			<h4>Forcible Rape</h4>
+  			<div id="map5"></div>
+  		</div>
+  		<div class="mapContainer center">
+  			<h4>Robbery</h4>
+  			<div id="map6"></div>
+  		</div>
+  		<div class="mapContainer center">
+  			<h4>Aggravated Assault</h4>
+  			<div id="map7"></div><br>
+  		</div>
+
+  </div>
+  <div class="grid_6 omega">  
+
+      <div class="mapContainer center">
+        <h4>Vehicle-Theft</h4>
+        <div id="map10"></div>
+      </div>
+      <div class="mapContainer center">
+        <h4>Burglary</h4>
+        <div id="map8"></div>
+      </div>
+      <div class="mapContainer center">
+        <h4>Larceny-Theft</h4>
+        <div id="map9"></div>
+      </div>
+
+  </div>
+  </div>
+	</div>
 	<script>
 
+visualizeMap(1100, 600, 1000, "#map1", "Index", ["#e7e1ef", "#dd1c77"]);
+visualizeMap(550, 500, 700, "#map2", "Violent", ["#fee8c8","#e34a33"]);
+visualizeMap(550, 500, 700, "#map3", "Property", ["#deebf7", "#3182bd"]);
+visualizeMap(275, 300, 360, "#map4", "Murder", ["#fee8c8","#e34a33"]);
+visualizeMap(275, 300, 360, "#map5", "Forcible Rape", ["#fee8c8","#e34a33"]);
+visualizeMap(275, 300, 360, "#map6", "Robbery", ["#fee8c8","#e34a33"]);
+visualizeMap(275, 300, 360, "#map7", "Aggravated Assault", ["#fee8c8","#e34a33"]);
+visualizeMap(275, 300, 360, "#map8", "Burglary", ["#deebf7", "#3182bd"]);
+visualizeMap(275, 300, 360, "#map9", "Larceny - Theft", ["#deebf7", "#3182bd"]);
+visualizeMap(275, 300, 360, "#map10", "Vehicle Theft", ["#deebf7", "#3182bd"]);
 
-
-
-visualizeMap(1200, 750, 1200, "#map1", "Index", ["white","black"]);
-visualizeMap(800, 500, 800, "#map2", "Violent", ["#fee8c8","#e34a33"]);
-visualizeMap(800, 500, 800, "#map3", "Property", ["#ffe6e6", "#4d0000"]);
-visualizeMap(400, 250, 400, "#map4", "Murder", ["#ffe6e6", "#4d0000"]);
-visualizeMap(400, 250, 400, "#map5", "Forcible Rape", ["#fff6e6", "#4d3200"]);
-visualizeMap(400, 250, 400, "#map6", "Robbery", ["#ffffe6", "#4d4d00"]);
-visualizeMap(400, 250, 400, "#map7", "Aggravated Assault", ["#e6ffe6", "#004d00"]);
-visualizeMap(400, 250, 400, "#map8", "Burglary", ["#e6faff", "#003d4d"]);
-visualizeMap(400, 250, 400, "#map9", "Larceny - Theft", ["#e6e6ff", "#00004d"]);
-visualizeMap(400, 250, 400, "#map10", "Vehicle Theft", ["#ffe6ff", "#4d004d"]);
-
-
-
+//create a chloropeth with the specified parameters
 function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorRange){
   var width = svgWidth,
   height = svgHeight;
 
   var projection = d3.geo.albersUsa()
   .scale(projectionScale)
-  .translate([width / 2, height / 2]);
+  .translate([width / 2, height / 2 - height/8]);
 
   var path = d3.geo.path()
   .projection(projection);
@@ -143,6 +190,7 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
 
   d3.json("data.json", function(error, data){
 
+    //create map
     var statePaths = svg1.append('g');
       var valueArray = []; //An array to store values to fine the min max in order to set the color scale
       for (var i in data){
@@ -164,18 +212,53 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
 
       .style('stroke', '#ccc');
 
+      //create a gradient legend for every map
+      var padding = width/8;
+      var minMaxArray = [Math.round(min), Math.round(max - (max-min)/2), Math.round(max)];
+
+      var xScale = d3.scale.linear().domain([min, max]).range([padding, width-padding]);
+      var xAxis = d3.svg.axis().scale(xScale).orient("bottom")
+      .tickValues(minMaxArray)
+      .tickFormat(d3.format("d")).tickSize(6);
+
+      svg1.append("g").attr("transform", "translate(0," + (height - 41) + ")").attr("class", "axis xaxis")
+      .call(xAxis);
+
+      var i = "gradient" + divId;
+      var gradient = svg1.append("defs")
+        .append("linearGradient")
+          .attr("id", "gradient" + i)
+          .attr("x1", "0%")
+          .attr("y1", "100%")
+          .attr("x2", "100%")
+          .attr("y2", "100%")
+          .attr("spreadMethod", "pad");
+
+      gradient.append("stop")
+          .attr("offset", "0%")
+          .attr("stop-color", colorRange[0])
+          .attr("stop-opacity", 1);
+
+      gradient.append("stop")
+          .attr("offset", "100%")
+          .attr("stop-color", colorRange[1])
+          .attr("stop-opacity", 1);
+
+      svg1.append("rect")
+          .attr("x", padding)
+          .attr("y", height-50)
+          .attr("width", width-2*padding)
+          .attr("height", "10")
+          .style("fill", "url(#gradient" + i +")");
+
+    });
   });
-
-});
 };
-
-
-
-
 </script>
-
-<h2>Project 1 </h2>
-  <p>Notes: variable crimeType is for x-axis measure, crimeType2 is for size of circle, feel free to change these up.
+<div class="container">
+  <div class="grid_12">
+<h2>Comparing Crime Data to Poverty Rate</h2>
+  <p></p>
     <div class="vis">
     </div>
     <div class="vis2">
@@ -184,23 +267,29 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
     </div>
     <div id="map">
     </div>
-
+</div>
+</div>
   <script>
   var crimeType2 = "Population";
   d3.json("data.json", function(error, data){
-       visualize(data, "Index", 1200, 700); 
-       visualize(data, "Violent", 1200, 700);
-       visualize(data, "Property", 1200, 700);
-       visualize(data, "Murder", 1200, 700);
-       visualize(data, "Forcible Rape", 1200, 700);
-       visualize(data, "Robbery", 1200, 700);
-       visualize(data, "Aggravated Assault", 1200, 700);
-       visualize(data, "Burglary", 1200, 700);
-       visualize(data, "Larceny - Theft", 1200, 700);
-       visualize(data, "Vehicle Theft", 1200, 700);  
+       visualize(data, "Index", 1200, 700,  "rgba(221, 28, 119, 0.3)"); 
+       visualize(data, "Violent", 1200, 700, "rgba(227, 74, 51, 0.3)");
+       visualize(data, "Property", 1200, 700, "rgba(49, 130, 189, 0.3)");
+       visualize(data, "Murder", 1200, 700, "rgba(227, 74, 51, 0.3)");
+       visualize(data, "Forcible Rape", 1200, 700, "rgba(227, 74, 51, 0.3)");
+       visualize(data, "Robbery", 1200, 700, "rgba(227, 74, 51, 0.3)");
+       visualize(data, "Aggravated Assault", 1200, 700, "rgba(227, 74, 51, 0.3)");
+       visualize(data, "Burglary", 1200, 700, "rgba(49, 130, 189, 0.3)");
+       visualize(data, "Larceny - Theft", 1200, 700, "rgba(49, 130, 189, 0.3)");
+       visualize(data, "Vehicle Theft", 1200, 700, "rgba(49, 130, 189, 0.3)");  
   });
 
-  function visualize(data, crimeType, svgWidth, svgHeight){
+
+
+
+
+  //creates scatterplot from specified parameters
+  function visualize(data, crimeType, svgWidth, svgHeight, color){
     //everything is nested in the callback function
     var crimeData = d3.entries(data);
     //combine datasets data.json and test.json
@@ -211,18 +300,13 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
           var obj = {key: crimeData[i].key, value: crimeData[i].value};
           for (var j in povertyData) {
               if ( abbrState( crimeData[i].key ,"name") == povertyData[j].state) {
-
                   obj.rate = povertyData[j].rate;
-                  if (povertyData[j].state == "Louisiana"){
-                  console.log(povertyData[j].rate);
-                }
                   obj_poverty_processed[povertyData[j].state] = true;
               }
           }
           obj.rate = obj.rate || 'no';
           completeData.push(obj);
       }
-    console.log(completeData);
     
     //svg
     var width=svgWidth;
@@ -247,32 +331,31 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
       }
       return (el.value[2013][crimeType2] * 100000) / el.value[2013].Population
     });
-    console.log(max2);
 
-
-    //scales
+    //create scales and axis
     var xScale = d3.scale.linear().domain([min - 0.05 * (max-min), max]).range([padding, width - padding]);
     var yScale = d3.scale.linear().domain([5, 24]).range([height - padding, padding]);
     var circleScale = d3.scale.sqrt().domain([0, max2]).range([0,30]);
     var xAxis = d3.svg.axis().scale(xScale).orient("bottom").tickFormat(d3.format("d"));
     var yAxis = d3.svg.axis().scale(yScale).orient("left");
     var colorScale = d3.scale.linear().domain([0,30]).range(["#ffffff","#ff12a5"]);
-    //axis
-    
-    //title
-    svg.append("text").text("2013 " + crimeType + " count per 100,000 of State population, compared to Poverty Rate (%)").attr("x",width/2).attr("y",30).attr("text-anchor","middle").attr("class","title");
-    svg.append("text").text("Circle size currently showing: " + crimeType2).attr("x",width/2).attr("y",60).attr("text-anchor","middle");
 
-    //axis
-    svg.append("text").text(crimeType + " per 100,000 of population").attr("x",width/2).attr("y",height - padding/2).attr("text-anchor","middle");
-    svg.append("text").text("Poverty Rate").attr("x",padding/2).attr("y",height/2).attr("text-anchor","middle");
-
-    for (var i in completeData){
-      console.log(i["key"]);
+    //add title
+    if (crimeType=="Index") {
+    svg.append("text").text("2013 Total crimes per 100,000 of State population, compared to Poverty Rate (%)").attr("x",width/2).attr("y",30).attr("text-anchor","middle").attr("class","title");
     }
-    console.log(completeData[5]);
-    console.log(completeData[3].value[2013][crimeType]);
+    else {
+    svg.append("text").text("2013 " + crimeType + " crimes count per 100,000 of State population, compared to Poverty Rate (%)").attr("x",width/2).attr("y",30).attr("text-anchor","middle").attr("class","title");
+    }
+    svg.append("text").text("Circle size shows: " + crimeType2).attr("x",width/2).attr("y",60).attr("text-anchor","middle");
 
+    //add axis
+    if (crimeType=="Index") {
+    svg.append("text").text("Total crimes per 100,000 of population").attr("x",width/2).attr("y",height - padding/2).attr("text-anchor","middle");
+    } else {
+    svg.append("text").text(crimeType + " crimes per 100,000 of population").attr("x",width/2).attr("y",height - padding/2).attr("text-anchor","middle");
+    }
+    svg.append("text").text("Poverty Rate").attr("x",padding/2).attr("y",height/2).attr("text-anchor","middle");
 
     var dataPoints = 
     svg.selectAll("g")
@@ -280,9 +363,6 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
     .enter()
     .append("g")
     .attr("transform", function(d, i){
-      // if (d["key"] == "hi") {
-      //  console.log("me!" );
-      // }
       return "translate(" + xScale( (d.value[2013][crimeType] * 100000 )/ d.value[2013].Population ) + "," + 
         yScale(d.rate)    
          + ")";
@@ -294,7 +374,7 @@ function visualizeMap(svgWidth, svgHeight, projectionScale, divId, crime, colorR
         return circleScale(d.value[2013][crimeType2]);
       }
       return circleScale( (d.value[2013][crimeType2] * 100000 )/ d.value[2013].Population ) })
-    .attr("fill", "rgba(127, 127, 255, 0.3)");
+    .attr("fill", color);
 
     dataPoints.append("text")
     .text( function(d) {return abbrState(d.key, 'name') });
